@@ -734,6 +734,31 @@ BEGIN
     LTEXT           "Graph type:",IDC_GRAPHTYPELABEL,7,9,112,8
 END
 
+IDD_REPOCREATE DIALOGEX 0, 0, 186, 90
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
+    WS_SYSMENU
+CAPTION "Create Repository"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    DEFPUSHBUTTON   "OK",IDOK,9,69,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,68,69,50,14
+    PUSHBUTTON      "&Help",IDHELP,127,69,50,14
+    LTEXT           "Select the type of repository you want to create:",
+                    IDC_STATIC,7,7,172,20
+    CONTROL         "Berkeley Database (BDB)",IDC_RADIOBDB,"Button",
+                    BS_AUTORADIOBUTTON,7,33,172,10
+    CONTROL         "Native Filesystem (FSFS)",IDC_RADIOFSFS,"Button",
+                    BS_AUTORADIOBUTTON,7,46,172,10
+END
+
+IDD_PATCH_FILE_OPEN_CUSTOM DIALOGEX 0, 0, 94, 28
+STYLE DS_SETFONT | DS_3DLOOK | DS_FIXEDSYS | DS_CONTROL | WS_CHILD | 
+    WS_CLIPSIBLINGS | WS_SYSMENU
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    PUSHBUTTON      "Save To Clipboard",IDC_PATCH_TO_CLIPBOARD,7,7,80,14
+END
+
 
 /////////////////////////////////////////////////////////////////////////////
 //
@@ -1055,6 +1080,22 @@ BEGIN
         RIGHTMARGIN, 315
         TOPMARGIN, 7
         BOTTOMMARGIN, 159
+    END
+
+    IDD_REPOCREATE, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 179
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 83
+    END
+
+    IDD_PATCH_FILE_OPEN_CUSTOM, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 87
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 21
     END
 END
 #endif    // APSTUDIO_INVOKED
@@ -1525,6 +1566,11 @@ BEGIN
     IDS_STATGRAPH_COMMITSBYAUTHORY "commits"
 END
 
+STRINGTABLE 
+BEGIN
+    IDS_CLIPBOARD_PROGRESS_DEST "Clipboard"
+END
+
 #endif    // English (U.S.) resources
 /////////////////////////////////////////////////////////////////////////////
 
@@ -1537,48 +1583,6 @@ END
 LANGUAGE LANG_GERMAN, SUBLANG_GERMAN_SWISS
 #pragma code_page(1252)
 #endif //_WIN32
-
-/////////////////////////////////////////////////////////////////////////////
-//
-// Dialog
-//
-
-IDD_REPOCREATE DIALOGEX 0, 0, 186, 90
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
-    WS_SYSMENU
-CAPTION "Create Repository"
-FONT 8, "MS Shell Dlg", 400, 0, 0x1
-BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,9,69,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,68,69,50,14
-    PUSHBUTTON      "&Help",IDHELP,127,69,50,14
-    LTEXT           "Select the type of repository you want to create:",
-                    IDC_STATIC,7,7,172,20
-    CONTROL         "Berkeley Database (BDB)",IDC_RADIOBDB,"Button",
-                    BS_AUTORADIOBUTTON,7,33,172,10
-    CONTROL         "Native Filesystem (FSFS)",IDC_RADIOFSFS,"Button",
-                    BS_AUTORADIOBUTTON,7,46,172,10
-END
-
-
-/////////////////////////////////////////////////////////////////////////////
-//
-// DESIGNINFO
-//
-
-#ifdef APSTUDIO_INVOKED
-GUIDELINES DESIGNINFO 
-BEGIN
-    IDD_REPOCREATE, DIALOG
-    BEGIN
-        LEFTMARGIN, 7
-        RIGHTMARGIN, 179
-        TOPMARGIN, 7
-        BOTTOMMARGIN, 83
-    END
-END
-#endif    // APSTUDIO_INVOKED
-
 
 #ifdef APSTUDIO_INVOKED
 /////////////////////////////////////////////////////////////////////////////
